break words on overflow, resolves #135

--- a/src/scss/vault.scss
+++ b/src/scss/vault.scss
@@ -68,6 +68,8 @@
 
         ul.fa-ul {
             li {
+                word-break: break-all;
+
                 .fa-li {
                     left: -11px;
                     top: 8px;
